--- a/app/partials/bdm_list.html
+++ b/app/partials/bdm_list.html
@@ -43,7 +43,17 @@
 	}
 	.cell_hd.select{
 			color:#588dd4 !important;
-			border-bottom: 3px solid #588dd4;
+			/*border-bottom: 3px solid #588dd4;*/
+			position: relative;
+	}
+	.select:after {
+	  content: "";
+	  position: absolute;
+	  width: 100%;
+	  height: 3px;
+	  background-color: #247ad1;
+	  bottom: 0;
+	  left: 0
 	}
 	.cell_hd span{
 		vertical-align: super;
@@ -53,11 +63,13 @@
 		position: relative;
 		box-shadow: 1px 1px 1px #ccc;
 		overflow: hidden;
+		margin-bottom: 15px;
 	}
 	.container .wrapper {
 		position: relative;
 		background-color: #fff;
 		padding:0.05rem 0.13rem;
+		overflow: hidden;
 	}
 	.container .bg{
 		position:absolute;left:0;top:0;bottom:0;background-color:#588dd4;width:0.13rem;
@@ -154,6 +166,32 @@
 	  overflow: hidden;position: fixed;bottom:0;width:100%;
 	  border-top: 1px solid #e2e2e2;
 	}
+	.blue{
+		color:#588dd4
+	}
+	.process-container-left{
+		margin-left: 0.15rem;
+		float:left;
+	}
+	.process-container-left img{
+		width:70px;
+		height:70px;
+		margin-left: 0.2rem;
+	}
+	.process-container-right{
+		float:left;
+		margin-left: 0.2rem;
+	}
+	.process-container-right .name{
+		color:#000;
+		font-size: 0.16rem;
+		font-weight: bold;
+		line-height: 1;
+	}
+	.process-container-right .subtitle{
+		color:#555555;
+		line-height: 1;
+	}
 </style>
 
 <header>
@@ -193,12 +231,26 @@
 
 <div class="container">
 	<ul >
+
+		<li  ng-if="data.un_settled_policies_amount > 0" style="">
+			<div class="wrapper" style="padding:0.2rem 0">
+				<div class="bg"></div>
+				<div class="process-container-left">
+					<img src="img/loadding.png" >
+				</div>	
+				<div class="process-container-right">
+					<p class="name"><span class="blue">{{data.un_settled_policies_amount}}</span>份保单待处理</p>
+					<p class="subtitle">正在识别中……</p>
+				</div>
+			</div>
+		</li>
+
 		<li ng-click="goDetail(policy.id)"   ng-repeat="policy in filtered = (data.policies |filter:filterFn )">
 			<div class="wrapper">
 				<div class="bg"></div>
 				<div class="title">保单号:{{policy.policy_no}} <!--<span class="example">示例保单</span>--></div>
 				<div class="des ">
-					<!--<img class="logo" src="img/picc_logo.jpg"   />-->
+					<img class="logo" ng-src="{{policy.icon}}"   />
 					<div style="margin-right: 1rem;">
 						<div class="product">{{policy.name}}</div>
 						<div class="time"><img src="img/clock.jpg"/>2016.03.03-2016.04.05</div>
@@ -219,8 +271,9 @@
 				</div>
 			</div>
 		</li>
-	<!--
-		<li ng-click="goDetail()">
+	
+	<!-- ng-if="data.policies.length == 0" -->
+		<li ng-click="goDetail('test')"  >
 			<div class="wrapper">
 				<div class="bg"></div>
 				<div class="title">保单号:231312312312 <span class="example">示例保单</span></div>
@@ -244,7 +297,7 @@
 				</div>
 			</div>
 		</li>
-	 -->
+	 <!---->
 	</ul>
 </div>
 
