modify the bugs

--- a/app/partials/bdm_list.html
+++ b/app/partials/bdm_list.html
@@ -273,7 +273,7 @@
 		</li>
 	
 	<!-- ng-if="data.policies.length == 0" -->
-		<li ng-click="goDetail('test')"  >
+		<li ng-click="goDetail('test')"  ng-if="data.policies.length == 0" >
 			<div class="wrapper">
 				<div class="bg"></div>
 				<div class="title">保单号:231312312312 <span class="example">示例保单</span></div>
