--- a/app/partials/bdm_list.html
+++ b/app/partials/bdm_list.html
@@ -1,23 +1,26 @@
 <style>
+    body{
+    	background-color: #f5f5f5;
+    }
 	header{
-		padding:20px;
+		background-color: #fff;
+		padding:.25rem .19rem;
 	}
-
 	header .left{
 		float:left;
-		width:65px;
-		height:65px;
+		width:0.65rem;
+		height:0.65rem;
 		border-radius: 100%;
 		background-color: #f0f0f0;
 		text-align: center;
+		margin-top: 0.1rem;
 	}
-	
 	header .left img{
-		width:25px;
-		margin-top: 18px;
+		width:.25rem;
+		margin-top: .16rem;
 	}/**/
 	header .right{
-		margin:9px 0 0 80px;
+		margin:.09rem 0 0 .8rem;
 	}
 	header .title{
 		font-size:0.18rem;font-weight: bold;
@@ -29,11 +32,12 @@
 			font-weight: bold;
 	}
 	.container{
-		padding: 0.1rem;
+		padding: 0.12rem;
 		background-color: #f5f5f5;
 		margin-bottom: 80px;
 	}
 	.nav{
+		background-color: #fff;
 		border-top:1px solid #e2e2e2;
 		border-bottom:1px solid #e2e2e2;
 		font-size:0.16rem;
@@ -61,9 +65,9 @@
 	}
 	.container li {
 		position: relative;
-		box-shadow: 1px 1px 1px #ccc;
+		box-shadow: 1px 0px 1px #ccc;
 		overflow: hidden;
-		margin-bottom: 15px;
+		margin-bottom: 0.12rem;
 	}
 	.container .wrapper {
 		position: relative;
@@ -125,7 +129,7 @@
 		position: relative;
 		color:#588dd4;
 		font-size:0.15rem;
-		padding:0.15rem;
+		padding:0.13rem;
 		overflow: hidden;
 	}
 	.sub-container span{
@@ -135,20 +139,20 @@
 	.pei_button{
 		  display:inline-block;
 		  float:right;
-		  padding:5px 22px;
+		  padding:0.05rem 0.24rem;
 		  border-radius: 3px;
 		  border:1px solid #ff5c00;
 		  background-color: #fff;
 		  color:#ff5c00;
-		  font-size: 0.2rem;
+		  font-size: 0.17rem;
 	}
 	.bottom{
 		border-top:1px solid #d2d2d2;
-		border-bottom:1px solid #d2d2d2;
+		/*border-bottom:1px solid #d2d2d2;*/
 		height:8px;
 		background-color: #fff;
 		position: absolute;
-		bottom:0px;
+		bottom:2px;
 		width:100%;
 		left:4px;
 	}
@@ -192,6 +196,34 @@
 		color:#555555;
 		line-height: 1;
 	}
+	.cell_hd{
+		height:0.57rem;
+	}
+	.tip{
+		width: 100%;
+		text-align: center;
+		color:#555555;
+		position: fixed;
+		bottom:0.6rem;
+	}
+	.tip div{
+		padding-top:0.1rem;
+	}
+	.tip div:after{
+		  content: " ";
+		  display: inline-block;
+		  -webkit-transform: rotate(135deg);
+		      -ms-transform: rotate(135deg);
+		          transform: rotate(135deg);
+		  height: 11px;
+		  width: 11px;
+		  border-width: 2px 2px 0 0;
+		  border-color: #ff5c00;
+		  border-style: solid;
+		  position: relative;
+		  top: -2px;
+		  top: -1px;
+	}
 </style>
 
 <header>
@@ -203,7 +235,7 @@
 	
 	</div>
 	<div class="right">
-		<div class="title">游客</div>
+		<div class="title">诺贝用户</div>
 		<div class="subtitle">
 			总保费 {{data.total_premium}}元 &emsp;综合评分
 			<span class="blue">{{data.total_score}}</span>
@@ -221,6 +253,10 @@
 	</div>
 	<div class="cell_hd  cell_primary "  ng-class='{"select":type=="2"}' ng-click='type="2"'  >
 		健康
+		<span>{{typeGroup[2].length}}</span>
+	</div>
+	<div class="cell_hd  cell_primary "  ng-class='{"select":type=="1"}' ng-click='type="1"'  >
+		家庭	
 		<span>{{typeGroup[2].length}}</span>
 	</div>
 	<div class="cell_hd  cell_primary "  ng-class='{"select":type=="5"}' ng-click='type="5"' >
@@ -301,6 +337,10 @@
 	</ul>
 </div>
 
+<div class="tip"  ng-if="data.policies.length == 0" >
+	点击上传 进行保单体检
+	<div></div>
+</div>
 <div class="cell pay_container">
   <a href="javascript:void(0)" class="btn btn_dark_2_primary" ng-click="goBdUpload();" style="border-radius: 0px;">上传保单</a>
 </div>
