--- a/app/partials/bdm_list.html
+++ b/app/partials/bdm_list.html
@@ -1,231 +1,4 @@
-<style>
-    body{
-    	background-color: #f5f5f5;
-    }
-	header{
-		background-color: #fff;
-		padding:.25rem .19rem;
-	}
-	header .left{
-		float:left;
-		width:0.65rem;
-		height:0.65rem;
-		border-radius: 100%;
-		background-color: #f0f0f0;
-		text-align: center;
-		margin-top: 0.1rem;
-	}
-	header .left img{
-		width:.25rem;
-		margin-top: .16rem;
-	}/**/
-	header .right{
-		margin:.09rem 0 0 .8rem;
-	}
-	header .title{
-		font-size:0.18rem;font-weight: bold;
-	}
-	header .subtitle{
-		font-size:0.15rem;margin-top:8px;
-	}
-	header span{
-			font-weight: bold;
-	}
-	.container{
-		padding: 0.12rem;
-		background-color: #f5f5f5;
-		margin-bottom: 80px;
-	}
-	.nav{
-		background-color: #fff;
-		border-top:1px solid #e2e2e2;
-		border-bottom:1px solid #e2e2e2;
-		font-size:0.16rem;
-	}
-	.cell_hd{
-		text-align: center;
-	}
-	.cell_hd.select{
-			color:#588dd4 !important;
-			/*border-bottom: 3px solid #588dd4;*/
-			position: relative;
-	}
-	.select:after {
-	  content: "";
-	  position: absolute;
-	  width: 100%;
-	  height: 3px;
-	  background-color: #247ad1;
-	  bottom: 0;
-	  left: 0
-	}
-	.cell_hd span{
-		vertical-align: super;
-		color:#999999;
-	}
-	.container li {
-		position: relative;
-		box-shadow: 1px 0px 1px #ccc;
-		overflow: hidden;
-		margin-bottom: 0.12rem;
-	}
-	.container .wrapper {
-		position: relative;
-		background-color: #fff;
-		padding:0.05rem 0.13rem;
-		overflow: hidden;
-	}
-	.container .bg{
-		position:absolute;left:0;top:0;bottom:0;background-color:#588dd4;width:0.13rem;
-	}
-	.container .title{
-		color:#555555;
-		font-size:0.2rem;
-		height:0.5rem;
-		line-height: 0.5rem;
-		padding-left: 0.15rem;
-	}
-	.container .des{
-
-		border-bottom:1px solid #e2e2e2;
-		border-top:1px solid #e2e2e2;
-		padding:0.2rem 0.2rem 0.1rem 0.15rem;
-		position: relative;
-	}
-	.container .status{
-		position: absolute;
-		right:0.1rem;
-		bottom:0.15rem;
-		width:1rem;
-		height:0.4rem;
-	}
-	.success{
-		background: #fff url('img/cover.png?v=32') no-repeat center;
-		background-size:1rem;
-	}
-	.container .des .logo{
-		float:right;
-		width:0.8rem;
-	}
-	.container .product{
-		font-size: 0.2rem;
-		font-weight: bold;
-	}
-	.container .time{
-		line-height: 0.5rem;
-		height:0.5rem;
-		color:#999999;
-	}
-	.container .time img{
-		width:14px;
-		vertical-align: text-bottom;
-	}
-	.container .cover{
-		position: absolute;
-		right:10px;
-		top:20%;
-	}
-	.sub-container{
-		position: relative;
-		color:#588dd4;
-		font-size:0.15rem;
-		padding:0.13rem;
-		overflow: hidden;
-	}
-	.sub-container span{
-		font-size:0.25rem;
-		font-weight: bold;
-	}
-	.pei_button{
-		  display:inline-block;
-		  float:right;
-		  padding:0.05rem 0.24rem;
-		  border-radius: 3px;
-		  border:1px solid #ff5c00;
-		  background-color: #fff;
-		  color:#ff5c00;
-		  font-size: 0.17rem;
-	}
-	.bottom{
-		border-top:1px solid #d2d2d2;
-		/*border-bottom:1px solid #d2d2d2;*/
-		height:8px;
-		background-color: #fff;
-		position: absolute;
-		bottom:2px;
-		width:100%;
-		left:4px;
-	}
-	.bottom>div{
-		border-top:1px solid #d2d2d2;
-		border-bottom:1px solid #d2d2d2;
-		background-color: #fff;
-		height:2px;
-		margin:2px 0 ;
-	}
-	.example{
-		font-size: 0.25rem;color:#ff5c00;float:right;
-	}
-	.pay_container{
-	  overflow: hidden;position: fixed;bottom:0;width:100%;
-	  border-top: 1px solid #e2e2e2;
-	}
-	.blue{
-		color:#588dd4
-	}
-	.process-container-left{
-		margin-left: 0.15rem;
-		float:left;
-	}
-	.process-container-left img{
-		width:70px;
-		height:70px;
-		margin-left: 0.2rem;
-	}
-	.process-container-right{
-		float:left;
-		margin-left: 0.2rem;
-	}
-	.process-container-right .name{
-		color:#000;
-		font-size: 0.16rem;
-		font-weight: bold;
-		line-height: 1;
-	}
-	.process-container-right .subtitle{
-		color:#555555;
-		line-height: 1;
-	}
-	.cell_hd{
-		height:0.57rem;
-	}
-	.tip{
-		width: 100%;
-		text-align: center;
-		color:#555555;
-		position: fixed;
-		bottom:0.6rem;
-	}
-	.tip div{
-		padding-top:0.1rem;
-	}
-	.tip div:after{
-		  content: " ";
-		  display: inline-block;
-		  -webkit-transform: rotate(135deg);
-		      -ms-transform: rotate(135deg);
-		          transform: rotate(135deg);
-		  height: 11px;
-		  width: 11px;
-		  border-width: 2px 2px 0 0;
-		  border-color: #ff5c00;
-		  border-style: solid;
-		  position: relative;
-		  top: -2px;
-		  top: -1px;
-	}
-</style>
-
+<link rel="stylesheet" type="text/css" href="css/baodan_manage_list.css?rev=99c4bac69e153a2b298c33b5bb5c240e">
 <header>
 	<div class="left">
 		<!--
