--- a/app/partials/bdm_detail.html
+++ b/app/partials/bdm_detail.html
@@ -1,138 +1,4 @@
-<style>
-	.wrapper{
-		background-color: #f5f5f5;
-		padding:0.13rem;
-		position: relative;
-		color:#555555;
-	}
-	.yanzhen{
-		background: url(img/yiyanzhen.png) no-repeat right top;
-		background-size:100px;
-	}
-	.blue{
-		color:#588dd4;
-	}
-	.gray{
-		color:#999999;
-	}
-	.container{
-		border: 1px solid #e2e2e2;
-		padding: 0.05rem;
-		background-color: #fff;
-		box-shadow: 0 0 1px 1px #e2e2e2;
-	}
-	.sub-container{
-		border: 5px solid #c3d7f2;
-		padding: 0.05rem;
-	}
-	.title{
-		color:#000;
-		font-weight: bold;
-		font-size:0.18rem;
-		text-align: center;
-		position: relative;
-	}
-	.logo{
-		position: absolute;
-		top:50%;
-		left:0.15rem;
-		margin-top: -9px;
-	}
-	.example{
-		font-size: 0.2rem;
-		color:#ff5c00;
-		text-align: center;
-		border-bottom: 1px solid #588dd4;
-	}
-	.bd-number{
-		margin-top: 0.2rem;
-	}
-	.insured-name{
-		overflow: hidden;line-height: 0.5rem;height:0.5rem;
-	}
-	.score{
-		float:right;
-		font-size: 0.25rem;
-		color:#1e4e8e;
-	}
-
-	table {
-	  width: 100%;
-	  border-collapse: collapse;
-	}
-	table td, table th {
-	  padding: 0.07rem;
-	  vertical-align:top;
-	  font-weight: normal;
-	}
-	.bd_th{
-	 	background-color: #f5f5f5;
-	}
-	
-	.bd_tr{
-	  border-bottom:1px solid #e2e2e2;
-	  text-align: left;
-	}
-	.right-border{
-		border-right:1px solid #e2e2e2;
-	}
-
-	.bd-wrapper{
-		background-color: #fff;
-		/*padding:0.13rem;*/
-		border-bottom:1px solid #e2e2e2;
-	}
-	.bd-name{
-		height:0.3rem;
-		line-height: 0.3rem;
-		padding:0.13rem;
-		border-bottom:1px solid #e2e2e2;
-	}
-	.bd-pic-container{
-		background-color: #fff;
-		margin:15px;
-		padding:3px;
-		width:120px;
-		height:150px;
-		overflow: hidden;
-		border:1px solid #efefef;
-		box-shadow: 0 0 1px 2px #efefef;
-		position: relative;
-	}
-	.bd-pic-container .number{
-		background-color: rgba(0,0,0,0.5);
-		color:#fff;
-		position: absolute;
-		bottom:3px;
-		right:3px;
-		width:35px;
-		text-align: center;
-	}
-	.bd-pic-container img{
-		width:100%;
-		height:150px;
-	}
-	.tail-container {
-		background-color: #f5f5f5;
-		color:#555;
-	}
-	.cell{
-		background-color: #fff;
-	}
-	.cell_hd{
-		text-align: center;
-		height:65px ;
-	}
-	.cell_hd .img-box{
-		height: 25px;
-	}
-	.cell_hd img{
-		width:20px;
-	}
-	.cell_hd:active{
-		background-color: #f0f0f0;
-	}
-</style>
+<link rel="stylesheet" type="text/css" href="css/baodan_manage_detail.css?rev=88a935c0a96a5efa54b4423d8f539e2c">
 <div ng-if="isTest == false">
 <div class="wrapper ">
 	<img src="img/yiyanzhen.png" style="position: absolute;top:9px;right:11px;width:70px;z-index: 5;display: none">
@@ -140,7 +6,7 @@
 		<div class="sub-container">
 			<div class="title">
 				<p class="logo">
-					<img style="width:50px" src="img/picc_logo.jpg"/>
+					<img style="width:50px" ng-src="{{data.icon}}"/>
 				</p>
 				{{data.name}}
 			</div>
@@ -218,10 +84,12 @@
 						<div  class="img-box"><img src="img/tiaokuan.png"/></div>
 						<div>条款</div>
 					</div>
+					<!--
 					<div class="cell_hd cell_primary" >
 						<div  class="img-box"><img src="img/baodan.png"/></div>
 						<div>电子保单</div>
 					</div>
+					-->
 					<div class="cell_hd cell_primary" >
 						<div  class="img-box"><img src="img/fenxiang.png"/></div>
 						<div>发送</div>
