--- a/app/partials/tb_notive.html
+++ b/app/partials/tb_notive.html
@@ -1,7 +1,7 @@
 <!-- 投保须知 -->
 <link rel="stylesheet" href="css/claim_information.css">
 <link rel="stylesheet" href="css/tb_notive.css">
-<ul>
+<ul class="claim_controller">
 	<li>
 		<p><img src="img/claim_information/logo.jpg" alt="">官网</p>
 		<a href="###">中国平安保险网</a>
@@ -11,16 +11,35 @@
 		<a href="###">中国保险行业协会官网</a>
 	</li>
 	<li>
-		<p>协议</p>
+		<p><img src="img/claim_information/logo.jpg" alt="">协议</p>
 		<a class="content" href="###">保险利益是指投保险标的具有的法律上承认的利益。通常投保人会因为保险标的的损害或者丧失早熟经济上的损失。</a>
 	</li>
 	<li>
-		<p>客服</p>
+		<p><img src="img/claim_information/logo.jpg" alt="">客服</p>
 		<a href="###">中国平安保险客服</a>
 	</li>
 	<li>
-		<p>健康告知</p>
+		<p><img src="img/claim_information/logo.jpg" alt="">健康告知</p>
 		<a class="ta_50" href="###">天安人寿50项大病保险</a>
 	</li>
+
 </ul>
+<ul class="ajax_data_font content">
+	<li>1.几乎都是飞机上的方法会记得发货记得发货的房间号多少就放寒假</li>
+	<li>2.圣诞节分开发环境的十分的数据是否更好的方式发给甲方工地施工费</li>
+	<li>3.速度好快就付款记录和理解和空间都是可不可不看看看看就好回到家</li>
+	<li>4.速度好快就付款记录和理解和空间都是可不可不看看看看就好回到家</li>
+	<li>5.几乎都是飞机上的方法会记得发货记得发货的房间号多少就放寒假</li>
+	<li>6.圣诞节分开发环境的十分的数据是否更好的方式发给甲方工地施工费</li>
+	<li>7.速度好快就付款记录和理解和空间都是可不可不看看看看就好回到家</li>
+	<li>8.速度好快就付款记录和理解和空间都是可不可不看看看看就好回到家</li>
+</ul>
+<div class="cut_container" >
+		<a class="left cut_cell" href="###">
+			部分情况有
+		</a>
+		<a class="right cut_cell"href="###">
+			以上情况全无
+		</a>
+</div>
 
