--- a/app/css/claim_information.css
+++ b/app/css/claim_information.css
@@ -2,23 +2,27 @@
 body{
 	background: #f5f5f5;
 }
-ul {
+.claim_controller {
 	padding: 0 .19rem;
 }
-ul li {
+.claim_controller li {
 	padding-top: .38rem;
 }
 	
 p{
+	/*padding-left: 38px;*/
+	/*background: url(img/claim_information/logo.jpg) no-repeat;*/
 	color: #555;
+	font-size: .17rem;
+	font-weight: bold;
 }
-/*span {
+span {
 	font-size: .19rem;
 	display: inline;
 	color: #555;
 	padding-left: 10px;
 	font-weight: bold;
-}	*/
+}
 img{
 	width: .19rem;
 	height: .19rem;
@@ -27,8 +31,7 @@ a{
 	color: #588dd4;
 	text-decoration: underline;
 	font-size: .16rem;
-	display: block;
-	padding-top: .1rem;
+	display: block; 
 }
 .content {
 	color: #999999;
