--- a/app/css/globe.css
+++ b/app/css/globe.css
@@ -468,7 +468,7 @@ overflow: hidden;
     bottom: 0;
     left: 0;
     right: 0;
-    background: url("../img/share_word.png") no-repeat;
+    background: url("../../img/share_word.png") no-repeat;
     -webkit-background-size: 100% auto;
     -moz-background-size: 100% auto;
     background-size: 100% auto;
