--- a/app/partials/bd_education.html
+++ b/app/partials/bd_education.html
@@ -20,6 +20,7 @@
 	.table-container{
 		padding:0 0.2rem;
 		background-color:#fff;
+		color:#555555;
 	}
 	table {
 	  width: 100%;
@@ -75,7 +76,7 @@
 	.hex-title-container{
 		height:0.5rem;
 		line-height: 0.5rem;
-		color:#588dd4;
+		color:#555555;
 		border-bottom: 1px solid #e2e2e2;
 		padding:0 0.2rem;
 		font-size:0.18rem;
