--- a/app/css/baodan_manage_detail.css
+++ b/app/css/baodan_manage_detail.css
@@ -1,8 +1,8 @@
 .wrapper{
-		background-color: #f5f5f5;
 		padding:0.13rem;
 		position: relative;
 		color:#555555;
+		
 	}
 	.yanzhen{
 		background: url(img/yiyanzhen.png) no-repeat right top;
@@ -14,7 +14,7 @@
 	.gray{
 		color:#999999;
 	}
-	.container{
+	.contai-er{
 		border: 1px solid #e2e2e2;
 		padding: 0.05rem;
 		background-color: #fff;
@@ -34,7 +34,7 @@
 	.logo{
 		position: absolute;
 		top:50%;
-		left:0.15rem;
+		left:0rem;
 		margin-top: -9px;
 	}
 	.example{
@@ -47,7 +47,10 @@
 		margin-top: 0.2rem;
 	}
 	.insured-name{
-		overflow: hidden;line-height: 0.5rem;height:0.5rem;
+		overflow: hidden;line-height: 0.3rem;height:0.3rem;
+	}
+	.insured-item{
+		line-height: 0.3rem;height:0.3rem;
 	}
 	.score{
 		float:right;
@@ -80,6 +83,8 @@
 		background-color: #fff;
 		/*padding:0.13rem;*/
 		border-bottom:1px solid #e2e2e2;
+		margin-bottom:70px;
+
 	}
 	.bd-name{
 		height:0.3rem;
@@ -112,8 +117,11 @@
 		height:150px;
 	}
 	.tail-container {
+		position: fixed;
+		bottom:0;
 		background-color: #f5f5f5;
 		color:#555;
+		z-index: 200000;
 	}
 	.cell{
 		background-color: #fff;
