modify the bugs

--- a/app/partials/bdm_detail.html
+++ b/app/partials/bdm_detail.html
@@ -109,7 +109,7 @@
 <div>
 	<div class="tail-container">
 		<div class="cell ">
-			<div class="cell_hd cell_primary">
+			<div class="cell_hd cell_primary" ng-click="goClaimInfo(data.claim_info_id )">
 				<div class="img-box">
 					<img src="img/qian1.png"/>
 				</div>
