--- a/app/wx_share/css/index_part.css
+++ b/app/wx_share/css/index_part.css
@@ -1,19 +1,54 @@
-* {margin: 0;padding: 0;}
-body {
-	background: #fef3d7;
-}
+* { margin: 0;padding: 0; }
+body { background: #fef3d7; }
 .my_bd_controller {
 	height: auto;
-	padding: .26rem;
+	padding: .38rem;
 }
+
 .layout {
 	overflow: auto;
 }
+
 .ul_contrl li:nth-child(1){
-	float: left;
+	float: right;
 	width: 2.45rem;
 	border-bottom: 7px solid #e52f62;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*
 .ul_contrl li:nth-child(1) p{
 	display: inline-block;
 	font-size: .17rem;
@@ -31,8 +66,8 @@ body {
 	border-bottom: 7px solid #003756;
 	font-size: .17rem;
 	color: #003756;
-}
-.logo_controller {
+}*/
+/*.logo_controller {
 	margin-top: 28px;
 	width: 100%;
 	height: 2.9rem;
@@ -135,4 +170,4 @@ img  {
 	float: right;
 	width: 2.45rem;
 	border-bottom: 7px solid #e52f62;
-}
+}*/
