--- a/app/partials/bdm_detail.html
+++ b/app/partials/bdm_detail.html
@@ -1,5 +1,5 @@
-<link rel="stylesheet" type="text/css" href="css/baodan_manage_detail.css?rev=241f39b5905859509965874645d8cb88">
-<div ng-if="isTest == false"  cg-busy="loadingPromise">
+<link rel="stylesheet" type="text/css" href="css/baodan_manage_detail.css?rev=415b25002e33a2ccc51f771fe2c459f0">
+<div ng-if="isTest == false"  cg-busy="loadingPromise" style="margin-bottom:70px;">
 	<div class="wrapper ">
 		<img src="img/yiyanzhen.png" style="position: absolute;top:9px;right:11px;width:70px;z-index: 5;display: none">
 		<div class="container"  >
@@ -10,7 +10,7 @@
 					</p>
 					{{data.name}}
 				</div>
-				<div>
+				<div style="padding-left: 0.07rem">
 					<div class="insured-item">
 						<span class="gray">保单号：</span>
 						{{data.policy_no}}
@@ -24,11 +24,11 @@
 						<span class="gray">缴费方式</span>
 						{{getChargePeroidType(data.charge_period_type)}}
 					</div>
-					<div class="insured-item">
+					<div class="insured-item" ng-if="data.charge_period">
 						<span class="gray">缴费期间</span>
 						{{data.charge_period}}{{getChargePeroidTypeAbbre(data.charge_period_type)}}
 					</div>
-					<div class="insured-item">
+					<div class="insured-item" ng-if="data.charge_date">
 						<span class="gray">缴费时间</span>
 						{{data.charge_date}}
 					</div>
@@ -98,7 +98,7 @@
 		</div>
 	</div>
 
-	<div class="bd-wrapper">
+	<div class="bd-wrapper" ng-if="data.image_urls.length>0">
 		<div  class="bd-name">保单照片</div>
 		<div class="bd-pic-container"  ng-click="preview()">
 			<img ng-src="{{data.image_urls[0]}}"  />
