--- a/app/partials/bdm_detail.html
+++ b/app/partials/bdm_detail.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="css/baodan_manage_detail.css?rev=415b25002e33a2ccc51f771fe2c459f0">
+<link rel="stylesheet" type="text/css" href="css/baodan_manage_detail.css?rev=97c84b3f77a893807ff5d77ab4acbbc8">
 <div ng-if="isTest == false"  cg-busy="loadingPromise" style="margin-bottom:70px;">
 	<div class="wrapper ">
 		<img src="img/yiyanzhen.png" style="position: absolute;top:9px;right:11px;width:70px;z-index: 5;display: none">
@@ -148,7 +148,7 @@
 		<div class="sub-container">
 			<div class="title">
 				<p class="logo">
-					<img style="width:50px" src="img/picc_logo.jpg"/>
+					<img  src="img/picc_logo.jpg"/>
 				</p>
 				平安7天意外险
 			</div>
