--- a/app/partials/bdm_list.html
+++ b/app/partials/bdm_list.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="css/baodan_manage_list.css?rev=f0a124430a14b46beb01a68cecad7ca3">
+<link rel="stylesheet" type="text/css" href="css/baodan_manage_list.css?rev=ffe18759e927a3f720ddde02e91b3b90">
 <header>
 	<div class="left">
 		<!--
@@ -72,7 +72,7 @@
 				</div>
 				<div class="sub-container">
 					<div class="bd-score">
-						<span>{{policy.score}}</span>
+						<span>{{policy.score | number:2}}</span>
 						分
 					</div>
 					<div class="pei_button" >理赔</div>
