--- a/app/partials/bd_index.html
+++ b/app/partials/bd_index.html
@@ -11,12 +11,12 @@
 	margin-bottom: 0.5rem;
 	text-align: center;
 	border-top: 1px solid #e2e2e2;
+	background-color: #f5f5f5;
 }
 .bd_tail_container >div {
 	border:1px solid #1e4e8e;
 	border-radius: 3px;
 	padding:0.26rem 0.13rem;
-	background-color: #fff;
 }
 .bd_tail_container .title{
 	color:#555555;
@@ -55,6 +55,6 @@
 	<p class="title" >如何拍照</p>
 	<p class="subtitle">注：请拍清保单下的以下信息</p>
 	<div >
-		<img src="img/baodan.jpg" style="width:100%;">		
+		<img src="img/baodan_1.jpg" style="width:100%;">		
 	</div>
 </div>
