modify the bugs

--- a/app/partials/bd_index.html
+++ b/app/partials/bd_index.html
@@ -17,6 +17,7 @@
 	border:1px solid #1e4e8e;
 	border-radius: 3px;
 	padding:0.26rem 0.13rem;
+	background-color: #fff;
 }
 .bd_tail_container .title{
 	color:#555555;
@@ -48,13 +49,13 @@
 		<a href="javascript:void(0)" id="chooseImage" ng-click="goUpload('1')" class="btn btn_dark_primary big-btn" >上传我的保单照片</a>
 	</div>
 	<div class="cell " style="margin-top: 0.26rem">
-		<a href="javascript:void(0)" id="chooseImage" ng-click="goUpload('2')" class="btn special-btn" >上传他人保单照片</a>
+		<a href="javascript:void(0)" id="chooseImage" ng-click="goUpload('2')" class="btn special-btn" >上传家人保单照片</a>
 	</div>
 </div>
 <div class="bd_tail_container" >
 	<p class="title" >如何拍照</p>
 	<p class="subtitle">注：请拍清保单下的以下信息</p>
 	<div >
-		<img src="img/baodan_1.jpg" style="width:100%;">		
+		<img src="img/baodan_3.jpg" style="width:100%;">		
 	</div>
 </div>
