--- a/app/partials/bd_index.html
+++ b/app/partials/bd_index.html
@@ -33,8 +33,8 @@
 	border:1px solid #cccccc;
 	background-color:#fff;
 	color:#1e4e8e;
-	height:0.65rem;
-	line-height: 0.65rem;
+	/*height:0.65rem;*/
+	/*line-height: 0.65rem;*/
 }
 .big-btn{
 	height:0.65rem;
@@ -46,7 +46,7 @@
 
 <div class="bd_container" >
 	<div class="cell ">
-		<a href="javascript:void(0)" id="chooseImage" ng-click="goUpload('1')" class="btn btn_dark_primary big-btn" >上传我的保单照片</a>
+		<a href="javascript:void(0)" id="chooseImage" ng-click="goUpload('1')" class="btn btn_dark_primary " >上传我的保单照片</a>
 	</div>
 	<div class="cell " style="margin-top: 0.26rem">
 		<a href="javascript:void(0)" id="chooseImage" ng-click="goUpload('2')" class="btn special-btn" >上传家人保单照片</a>
