modify the bugs

--- a/app/partials/bd_index.html
+++ b/app/partials/bd_index.html
@@ -53,8 +53,8 @@
 	</div>
 </div>
 <div class="bd_tail_container" >
-	<p class="title" >如何拍照</p>
-	<p class="subtitle">注：请拍清保单下的以下信息</p>
+	<p class="title" >如何拍摄保单照片</p>
+	<!-- <p class="subtitle">注：请拍清保单下的以下信息</p> -->
 	<div >
 		<img src="img/baodan_3.jpg" style="width:100%;">		
 	</div>
