--- a/app/css/baodan_manage_detail.css
+++ b/app/css/baodan_manage_detail.css
@@ -84,10 +84,16 @@
 
 	.bd-wrapper{
 		background-color: #fff;
-		/*padding:0.13rem;*/
 		border-bottom:1px solid #e2e2e2;
-		
-
+	}
+	.bd-effective{
+		position: relative;
+	}
+	.bd-effective img{
+		position: absolute;
+		top:0.1rem;
+		left:0.5rem;
+		width:0.8rem;
 	}
 	.bd-name{
 		height:0.3rem;
