--- a/app/css/baodan_manage_list.css
+++ b/app/css/baodan_manage_list.css
@@ -3,7 +3,8 @@ body {
 }
 header {
 	background-color: #fff;
-	padding: .25rem .19rem;
+	padding: .266rem .19rem;
+	overflow: auto;
 }
 header .left {
 	float: left;
@@ -12,19 +13,18 @@ header .left {
 	border-radius: 100%;
 	background-color: #f0f0f0;
 	text-align: center;
-	margin-top: 0.1rem;
 }
 header .left img {
-	width: .25rem;
+	width: .35rem;
 	margin-top: .16rem;
 }
 
 /**/
 header .right {
-	margin: .09rem 0 0 .8rem;
+	margin: .02rem 0 0 .8rem;
 }
 header .title {
-	font-size: 0.19rem;
+	font-size: 0.18rem;
 	font-weight: bold;
 }
 header .subtitle {
@@ -41,13 +41,13 @@ header .subtitle {
 .container {
 	padding: 0.12rem;
 	background-color: #f5f5f5;
-	margin-bottom: 80px;
+	margin-bottom: 50px;
 }
 .nav {
 	background-color: #fff;
 	border-top: 1px solid #e2e2e2;
 	border-bottom: 1px solid #e2e2e2;
-	font-size: 0.16rem;
+	font-size: 0.18rem;
 }
 .cell_hd {
 	text-align: center;
@@ -66,14 +66,26 @@ header .subtitle {
 	left: 0
 }
 .cell_hd span {
-	vertical-align: super;
+	/*vertical-align: super;*/
+	position: absolute;
+	top:0.14rem;
+	font-size: 0.15rem;
 	color: #999999;
+}
+.select span{
+	color:#588dd4 ;
+}
+.container .default-li{
+	box-shadow: 0px 1px 3px #ccc;
 }
 .container li {
 	position: relative;
-	box-shadow: 1px 0px 1px #ccc;
 	margin-bottom: 0.12rem;
 	overflow: hidden;
+}
+.
+.container li:last-child{
+	margin-bottom: 0;
 }
 .container .wrapper {
 	position: relative;
@@ -102,7 +114,7 @@ header .subtitle {
 
 .container .title {
 	color: #555555;
-	font-size: 0.2rem;
+	font-size: 0.17rem;
 	height: 0.5rem;
 	line-height: 0.5rem;
 	padding-left: 0.15rem;
@@ -110,7 +122,7 @@ header .subtitle {
 .container .des {
 	border-bottom: 1px solid #e2e2e2;
 	border-top: 1px solid #e2e2e2;
-	padding: 0.2rem 0.2rem 0.1rem 0.15rem;
+	padding: 0.2rem 0.13rem 0.1rem 0.15rem;
 	position: relative;
 }
 .container .status {
@@ -124,6 +136,17 @@ header .subtitle {
 	background: #fff url('img/cover.png?v=32') no-repeat center;
 	background-size: 1rem;
 }
+
+.bd-effective{
+		position: relative;
+}
+.bd-effective img{
+	position: absolute;
+	right: 0;
+	bottom: 0.05rem;
+	width: 0.8rem;
+}
+
 .container .des .logo {
 	float: right;
 	width: 0.8rem;
@@ -172,7 +195,7 @@ header .subtitle {
 	background-color: #fff;
 	color: #588dd4;
 	font-size: 0.17rem;
-	margin-right: 0.2rem;
+	margin-right: 0.13rem;
 }
 .bottom {
 	border-top: 1px solid #d2d2d2;		/*border-bottom:1px solid #d2d2d2;*/
@@ -182,6 +205,8 @@ header .subtitle {
 	bottom: 0.02rem;
 	width: 100%;
 	left:0.05rem;
+	/*box-shadow:0px 8px 15px 1px #d2d2d2;*/
+	box-shadow:0px 4px 6px -2px #d2d2d2;
 	/*background: -webkit-linear-gradient(top,white 90%, #dadada 95%);*/
 }
 .bottom .linebox {
@@ -222,7 +247,7 @@ header .subtitle {
 }
 .process-container-right .name {
 	color: #000;
-	font-size: 0.16rem;
+	font-size: 0.18rem;
 	font-weight: bold;
 	line-height: 1;
 }
