--- a/app/partials/bd_index.html
+++ b/app/partials/bd_index.html
@@ -1,16 +1,20 @@
 <style>
-.bd_container,.bd_tail_container{
-	padding:0 0.26rem;
+body{
+	background-color: #f5f5f5;
 }
 .bd_container{
-	margin-top:0.51rem;
-	margin-bottom:0.51rem;
+	padding:0.51rem 0.26rem 0.31rem;
+	
+	/*background-color: #fff;*/
 }
 .bd_tail_container{
-	
-	margin-bottom: 0.5rem;
+	padding:0 0.26rem;
+}
+
+.bd_tail_container{
+	margin-bottom: 0.26rem;
 	text-align: center;
-	border-top: 1px solid #e2e2e2;
+	/*border-top: 1px solid #e2e2e2;*/
 	background-color: #f5f5f5;
 }
 .bd_tail_container >div {
@@ -41,12 +45,14 @@
 	line-height: 0.65rem;
 }
 
-
+.btn_up_primary{
+	background-color: #1e4e8e;
+	color: #fff;
+}
 </style>
-
 <div class="bd_container" >
 	<div class="cell ">
-		<a href="javascript:void(0)" id="chooseImage" ng-click="goUpload('1')" class="btn btn_dark_primary " >上传我的保单照片</a>
+		<a href="javascript:void(0)" id="chooseImage" ng-click="goUpload('1')" class="btn btn_up_primary " >上传我的保单照片</a>
 	</div>
 	<div class="cell " style="margin-top: 0.26rem">
 		<a href="javascript:void(0)" id="chooseImage" ng-click="goUpload('2')" class="btn special-btn" >上传家人保单照片</a>
