--- a/app/partials/bdm_detail.html
+++ b/app/partials/bdm_detail.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="css/baodan_manage_detail.css?rev=84a58209fb913ce483314a096d15119d">
+<link rel="stylesheet" type="text/css" href="css/baodan_manage_detail.css?rev=8e5affefbf0ffb26df6fa63777b93607">
 <div ng-if="isTest == false"  cg-busy="loadingPromise" style="margin-bottom:70px;">
 	<div class="wrapper " id="my_baodan">
 		<img src="img/yiyanzhen.png" style="position: absolute;top:9px;right:11px;width:70px;z-index: 5;display: none">
@@ -8,7 +8,7 @@
 					<p class="logo">
 						<img  ng-src="{{data.icon}}"/>
 					</p>
-					{{data.name}}
+					<div style="width:60%;margin:0 auto;">{{data.name}}</div>
 				</div>
 				<div style="padding-left: 0.07rem">
 					<div class="insured-item">
