--- a/app/partials/bdm_list.html
+++ b/app/partials/bdm_list.html
@@ -16,23 +16,23 @@
 	</div>
 </header>
 <div class="cell nav" style="color:#555555">
-	<div class="cell_hd  cell_primary "  ng-class='{"select":type=="4"}' ng-click='type="4"' >
+	<div class="cell_hd  cell_primary "  ng-class='{"select":type=="4"}' ng-click='setType("4")' >
 		意外
 		<span>{{typeGroup[4].length}}</span>
 	</div>
-	<div class="cell_hd  cell_primary "   ng-class='{"select":type=="3"}' ng-click='type=3' >
+	<div class="cell_hd  cell_primary "   ng-class='{"select":type=="3"}' ng-click='setType("3")' >
 		人寿
 		<span>{{typeGroup[3].length}}</span>
 	</div>
-	<div class="cell_hd  cell_primary "  ng-class='{"select":type=="2"}' ng-click='type="2"'  >
+	<div class="cell_hd  cell_primary "  ng-class='{"select":type=="2"}' ng-click='setType("2")'  >
 		健康
 		<span>{{typeGroup[2].length}}</span>
 	</div>
-	<div class="cell_hd  cell_primary "  ng-class='{"select":type=="1"}' ng-click='type="1"'  >
+	<div class="cell_hd  cell_primary "  ng-class='{"select":type=="1"}' ng-click='setType("1")'  >
 		家庭	
 		<span>{{typeGroup[1].length}}</span>
 	</div>
-	<div class="cell_hd  cell_primary "  ng-class='{"select":type=="5"}' ng-click='type="5"' >
+	<div class="cell_hd  cell_primary "  ng-class='{"select":type=="5"}' ng-click='setType("5")' >
 		财产
 		<span>{{typeGroup[5].length}}</span>
 	</div>
