--- a/app/wx_share/css/index.css
+++ b/app/wx_share/css/index.css
@@ -4,12 +4,18 @@
   html {
     font-size: 100px;
   }
+  .logo_controller {
+  	background: url(../img/my_bd/logo.png) no-repeat ;
+  }
 }
 
 /* iphone 4, iphone5 */
 @media only screen and (min-device-width:320px) and (max-device-width:568px) {
   html {
     font-size: 100px;
+  }
+   .logo_controller {
+  	background: url(../img/my_bd/logo.png) no-repeat ;
   }
 }
 
@@ -18,6 +24,9 @@
   html {
     font-size: 117.18px;
   }
+   .logo_controller {
+  	background: url(../img/my_bd/logo2.png) no-repeat ;
+  }
 }
 
 /* iphone6 plus */
@@ -25,157 +34,48 @@
   html {
     font-size: 129.37px;
   }
+   .logo_controller {
+  	background: url(../img/my_bd/logo2.png) no-repeat ;
+  }
 }
-body {
-	background: #fef3d7;
+ul {
+	  display: -webkit-box;
+	  display: -webkit-flex;
+	  display: -ms-flexbox;
+	  display: flex;
+	  padding: .2rem;
 }
-.my_bd_controller {
-	height: auto;
-	padding: .2rem;
+ul li {
+    height: auto;
 }
-.layout {
-	overflow: auto;
+li:nth-child(1) {
+	/*width: 1.9rem;*/
+	-webkit-box-flex: 1;
+    -webkit-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+    border-bottom: 7px solid #e52f62;
 }
-.ul_contrl li:nth-child(1){
-	float: left;
-	width: 1.9rem;
-	border-bottom: 7px solid #e52f62;
-	padding-bottom: .07rem;
+li:nth-child(2) {
+	width: .06rem;
+	border-bottom: 7px solid #fff;
+	
 }
-.ul_contrl li:nth-child(2){
-	float: right;
-	width: .83rem;
+li:nth-child(3) {
+	width: .84rem;
 	border-bottom: 7px solid #003756;
 	font-size: .13rem;
 	color: #003756;
 	padding-bottom: .07rem;
 }
-.ul_contrl li:nth-child(1) p{
+ul li:nth-child(1) p{
 	display: inline-block;
 	font-size: .13rem;
 }
-.ul_contrl li:nth-child(1) p:nth-child(1){
+ul li:nth-child(1) p:nth-child(1){
 	color: #003756;
 	font-weight: bold;
 }
-.ul_contrl li:nth-child(1) p:nth-child(2){
+ul li:nth-child(1) p:nth-child(2){
 	color: #e52f62;
-}
-
-.logo_controller {
-	margin-top: .15rem;
-	width: 100%;
-	height: 2.25rem;
-	background: url(../img/my_bd/logo.png) no-repeat ;
-	background-size: 100% 100%;
-	position: relative;
-}
-.button_contr {
-	position: absolute;
-	left: 0;
-	top: 1.5rem;
-	padding:0 0 0 .18rem;
-}
-.logo_controller img {
-	width: 100%;
-	height: 100%;
-}
-input {
-	border: none;
-	width: 1.09rem;
-	height: .39rem;
-	border-radius: 5px;
-	color: #fff;
-	padding-left: .15rem;
-	font-size: .12rem;
-}
-.input_1 {
-	background: #e42f62;
-}
-.input_2 {
-	margin: 0 0 0 .14rem;
-	background: #c2b085;
-}
-.money {
-	position: relative;
-}
-.money_song li {
-	list-style: none;
-	width: .16rem;
-	height: .16rem;
-	position: absolute;
-	top: .12rem;
-}
-.money_song li:nth-child(1){
-	left: .37rem;
-}
-.money_song li:nth-child(2){
-	list-style: none;
-	width: .16rem;
-	height: .16rem;
-	position: absolute;
-	top: .12rem;
-	left: 1.63rem;
-}
-img  {
-	width: 100%;
-	height: 100%;
-}
-.font_controller {
-	padding: .19rem 0 0 0;
-	position: relative;
-}
-.font_controller li{
-	list-style: none;
-	color: #a08f66;
-	font-size: 12px;
-}
-.font_controller p{
-	list-style: none;
-	color: #a08f66;
-	font-size: .08rem;
-	padding-bottom: .1rem;
-}
-.font_controller img{
-	width: .13rem;
-	height: .13rem;
-	/*vertical-align: middle;*/
-}
-.font_controller span {
-	display: inline-block;
-	font-size: .13rem;
-	color: #e52f62;
-	margin-left: .04rem;
-	/*font-weight: bold;*/
-}
-.paddBtn_20 {
-	padding-bottom: .2rem;
-}
-.main_font {
-	padding-bottom: .17rem; 
-	line-height: .17rem;
-}
-.two_code {
-	width: .75rem;
-	height: .75rem;
-	position: absolute;
-	left: 2.05rem;
-	top: 1.3rem;
-	overflow: auto;
-}
-.two_code img {
-	width: 100%;
-	height: 100%;
-}
-.footer_border li:nth-child(1) {
-	float: left;
-	width: .83rem;
-	border-bottom: 7px solid #003756;
-	font-size: .13rem;
-	color: #003756;
-}
-.footer_border li:nth-child(2) {
-	float: right;
-	width: 1.89rem;
-	border-bottom: 7px solid #e52f62;
 }
